--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "base_url = \"https://api.github.com/search/users\"\n",
-    "token = \"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\"\n",
+    "token = \"HIDDEN\"\n",
     "\n",
     "headers={\n",
     "    \"Accept\": \"application/vnd.github+json\",\n",
